--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
-		<script src="skycons.js"></script>
+		<script src="https://rawgithub.com/darkskyapp/skycons/master/skycons.js"></script>
 		
  	</head>
 
@@ -27,7 +27,9 @@
 				</section>
 
 				<section id="main__icon">
-					<div id="icon"></div>
+					<div id="icon">
+						<canvas id="skycon" width="64" height="64"></canvas>
+					</div>
 					<div id="summary"></div>
 				</section>
 
@@ -41,23 +43,31 @@
 			<aside>
 
 				<div class="week-forecast">
-					<div class="week-forecast__icon"></div>
+					<div class="week-forecast__icon">
+						<canvas id="skycon_small" width="32" height="32"></canvas>
+					</div>
 					<div class="week-forecast__temp"></div>
 					<div class="week-forecast__day"></div>
 				</div>
 				<div class="week-forecast">
-					<div class="week-forecast__icon"></div>
+					<div class="week-forecast__icon">
+						<canvas id="skycon_small" width="32" height="32"></canvas>
+					</div>
 					<div class="week-forecast__temp"></div>
 					<div class="week-forecast__day"></div>
 				</div>
 				<div class="week-forecast">
-					<div class="week-forecast__icon"></div>
+					<div class="week-forecast__icon">
+						<canvas id="skycon_small" width="32" height="32"></canvas>
+					</div>
 					<div class="week-forecast__temp"></div>
 					<div class="week-forecast__day"></div>
 				</div>
 				<div class="week-forecast">
 					<div class="week-forecast__temp"></div>
-					<div class="week-forecast__icon"></div>
+					<div class="week-forecast__icon">
+						<canvas id="skycon_small" width="32" height="32"></canvas>
+					</div>
 					<div class="week-forecast__day"></div>
 				</div>
 
@@ -65,6 +75,7 @@
 		</div>
 
 		<script src="script.js"></script>
+		<!-- <script src="svg.js"></script> -->
 
 	</body>
 </html>
