--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<main role="main">
 
 				<section id="main__temp">
-					<div id="temp"></div><span>º</span>		
+					<div id="temp"></div>	
 				</section>
 
 				<section id="main__icon">
